# tg-ai-user-bot

./: .gitignore  Dockerfile  Makefile  a.py  docker-compose.yml  example.env  pyproject.toml  reader.code-workspace
infrastructure/: db.sql  docker-compose.yml
reader-server/: Dockerfile  Makefile  example.env  pyproject.toml
reader-server/scripts/: export_onnx_model.py
reader-server/src/: __init__.py  config.py  main.py
reader-server/src/api/routes/: payment.py
reader-server/src/application/: __init__.py
reader-server/src/application/batch/: __init__.py  collector.py  manager.py  processor.py
reader-server/src/application/services/: __init__.py  message_processor.py
reader-server/src/core/: __init__.py  config.py
reader-server/src/domain/: __init__.py  models.py
reader-server/src/infrastructure/: __init__.py
reader-server/src/infrastructure/database/: __init__.py  connection.py  dependencies.py  models.py  repositories.py
reader-server/src/infrastructure/embeddings/: __init__.py  service.py
reader-server/src/infrastructure/messaging/: __init__.py  publishers.py
reader-server/src/schemas/: payment.py
reader-server/src/services/: rabbitmq.py
reader-telegram-bot/: .gitignore  Dockerfile  Makefile  README.md  example.env  pyproject.toml
reader-telegram-bot/src/: enums.py  fastapi_app.py  main.py
reader-telegram-bot/src/data/: config.py
reader-telegram-bot/src/db/: tables.py
reader-telegram-bot/src/db/migrations/: env.py
reader-telegram-bot/src/db/migrations/versions/: 0beed97bfdc5_initial.py  2e14e8281d77_added_token_usage.py  319d447460ed_update.py  3cc231e771b3_initial.py  3d73665b075b_initial_generation.py  7c15a13c8d5b_add_threads.py  8a57b1367995_update_last_name_nullable.py  cf1bb15de5ff_some_refactor.py  d69afc3071eb_remove_chat_id_from_message.py  d933aa1a978b_changed_sender_id_to_sender_username.py  db0241027eaa_replace_chat_title_by_name.py  ff5a5845f8a7_add_session_string.py
reader-telegram-bot/src/db/repositories/: __init__.py  base.py  chat.py  chat_topic.py  credentials.py  group_theme.py  message.py  telegram_auth.py  theme.py  topic.py  user.py
reader-telegram-bot/src/exceptions/: __init__.py  base.py  database.py
reader-telegram-bot/src/exceptions/telegram/: __init__.py  keyboard_utils.py  message.py
reader-telegram-bot/src/handlers/: callback_mapping.py
reader-telegram-bot/src/handlers/user/: __init__.py  chat.py  chat_handle.py  payment.py  registration.py  report.py  restore.py  start.py  topic.py
reader-telegram-bot/src/keyboards/default/: consts.py
reader-telegram-bot/src/keyboards/inline/: __init__.py  callbacks.py  consts.py
reader-telegram-bot/src/keyboards/inline/user/: __init__.py  chat.py  group.py  handle.py  payment.py  report.py  topic.py  utils.py
reader-telegram-bot/src/keyboards/keyboard_utils/: schema_generator.py
reader-telegram-bot/src/middlewares/: __init__.py  db.py
reader-telegram-bot/src/models/: __init__.py  base.py  chat.py  message.py  order.py  proxy.py  telegram_auth.py  topic.py  user.py
reader-telegram-bot/src/models/database/: __init__.py  chat.py  message.py  proxy.py  telegram_auth.py  thread.py  topic.py  user.py
reader-telegram-bot/src/models/rabbitmq/: __init__.py  base.py  client.py
reader-telegram-bot/src/rabbitmq/: __init__.py  consumer_registry.py  publisher.py
reader-telegram-bot/src/rabbitmq/consumers/: chat.py  client.py  registration.py  registration_consumer.py
reader-telegram-bot/src/states/: user.py
reader-telegram-bot/src/tg_bot/: __init__.py
reader-telegram-bot/src/tg_bot/handlers/: callback_mapping.py
reader-telegram-bot/src/tg_bot/handlers/user/: __init__.py  chat.py  group.py  group_handle.py  registration.py  report.py  restore.py  start.py  theme.py  topic.py
reader-telegram-bot/src/tg_bot/keyboards/inline/user/: handle.py  theme.py  topic.py  utils.py
reader-telegram-bot/src/tg_bot/middlewares/: logging.py
reader-telegram-bot/src/tg_bot/states/: user.py
reader-telegram-bot/src/user_bot/: __init__.py  bot.py  handlers.py  utils.py
reader-telegram-bot/src/utils/: __init__.py  connect_to_services.py  logging.py  messages.py  modulbank_api.py  telegram_publisher.py
reader-telethon-service/: Makefile  README.md  pyproject.toml
reader-telethon-service/src/: main.py
reader-telethon-service/src/config/: __init__.py  container.py  settings.py
reader-telethon-service/src/db/: __init__.py  db_enums.py  repositories.py  session.py  tables.py
reader-telethon-service/src/db/repositories/: __init__.py  base.py  chat.py  message.py  telegram_auth.py  thread.py  topic.py  user.py
reader-telethon-service/src/exceptions/: __init__.py  base.py  database.py  telegram.py
reader-telethon-service/src/handlers/: __init__.py  client.py  message.py  registration.py
reader-telethon-service/src/infrastructure/: __init__.py
reader-telethon-service/src/infrastructure/rabbitmq/: __init__.py  consumer.py  publisher.py
reader-telethon-service/src/infrastructure/redis/: __init__.py  redis_client.py
reader-telethon-service/src/infrastructure/telegram/: __init__.py  client_manager.py  client_wrapper.py  watchdog.py
reader-telethon-service/src/models/: __init__.py  enums.py
reader-telethon-service/src/models/database/: __init__.py  base.py  chat.py  message.py  proxy.py  telegram_auth.py  thread.py  topic.py  user.py
reader-telethon-service/src/models/domain/: __init__.py  chat.py  message.py  registration.py  telegram.py
reader-telethon-service/src/models/enums/: __init__.py
reader-telethon-service/src/models/enums/database/: __init__.py  sender_type.py
reader-telethon-service/src/models/enums/infrastructure/: __init__.py  rabbitmq.py
reader-telethon-service/src/models/enums/services/: __init__.py
reader-telethon-service/src/rabbitmq/: __init__.py  consumer.py  publisher.py  queues.py
reader-telethon-service/src/services/: __init__.py  client_service.py  exceptions.py  message_service.py  redis_client.py  registration_service.py  telethon_service.py
reader-telethon-service/src/utils/: __init__.py  logging.py
(+52 files in other folders)
