[tool.poetry]
name = "reader-server"
version = "0.1.0"
description = ""
authors = ["Alex Lapitski <alexeylapitski@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standart"], version = "^0.115.12"}
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"
aio-pika = "^9.5.5"
sentence-transformers = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
