[tool.poetry]
name = "reader-server"
version = "0.1.0"
description = ""
authors = ["Alex Lapitski <alexeylapitski@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"
aio-pika = "^9.5.5"
redis = {extras = ["hiredis"], version = "^6.1.0"}
dependency-injector = "^4.46.0"
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
structlog = "^25.3.0"
onnxruntime = "^1.22.0"
tokenizers = "^0.21.1"
numpy = "^2.2.6"
scipy = "^1.15.3"


[tool.poetry.group.dev.dependencies]
transformers = "^4.52.3"
optimum = "^1.25.3"
sentence-transformers = "^4.1.0"
onnx = "^1.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
