[tool.black]
target-version = ["py313"]

[tool.isort]
profile = "black"
py_version = 313
force_alphabetical_sort_within_sections = true
group_by_package = true

[tool.poetry]
name = "reader"
version = "0.1.0"
description = "Just reader"
authors = ["Alex Lapitski <alexeylapitski@gmail.com>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.16.0"
redis = "^5.2.1"
structlog = "^24.4.0"
tenacity = "^9.0.0"
orjson = "^3.10.12"
asyncpg = "^0.30.0"
environs = "^11.2.1"
openai = "^1.58.1"
httpx = "^0.28.1"
telethon = "^1.38.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"
openpyxl = "^3.1.5"
pytz = "^2025.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^24.10.0"}
types-redis = "^4.6.0.20241004"
isort = "^6.0.0"
types-pytz = "^2024.2.0.20241221"
types-cachetools = "^5.5.0.20240820"
deptry = "^0.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
