[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.16.0"
redis = "^5.2.1"
structlog = "^24.4.0"
tenacity = "^9.0.0"
orjson = "^3.10.12"
asyncpg = "^0.30.0"
environs = "^11.2.1"
openai = "^1.58.1"
httpx = "^0.28.1"
telethon = "^1.38.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"
openpyxl = "^3.1.5"
pytz = "^2025.2"
sqlalchemy = "^2.0.40"
pydantic = "^2.11.4"
pydantic-settings = "^2.9.1"
alembic = "^1.15.2"
aio-pika = "^9.5.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^24.10.0"}
types-redis = "^4.6.0.20241004"
isort = "^6.0.0"
types-pytz = "^2024.2.0.20241221"
types-cachetools = "^5.5.0.20240820"
deptry = "^0.21.2"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
