[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
telethon = "^1.40.0"
aio-pika = "^9.5.5"
redis = {extras = ["hiredis"], version = "^6.0.0"}
sqlalchemy = "^2.0.40"
orjson = "^3.10.18"
pydantic = "^2.11.4"
pydantic-settings = "^2.9.1"
asyncpg = "^0.30.0"
cryptg = "^0.5.0.post0"
dependency-injector = "^4.46.0"
structlog = "^25.3.0"
openai = "^1.79.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
